Progress on another dataset

--- a/draft.ipynb
+++ b/draft.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\marta\\anaconda3\\envs\\iannwtf\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "CheXNet applied to brain tumor MRI images used for binary classification of tumor vs no tumor.\n",
@@ -19,7 +28,30 @@
     "import tensorflow_datasets as tfds\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from keras.layers import Dense"
+    "from keras.layers import Input, Dense\n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# input_path = '../input/chest_xray/chest_xray/'\n",
+    "input_path = 'C:/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/chest_xray/'\n",
+    "\n",
+    "# Checkpoint file path\n",
+    "checkpoint_filepath = '/path/to/checkpoint' \n",
+    "\n",
+    "# Hyperparameters\n",
+    "img_dims = 224\n",
+    "epochs = 10\n",
+    "batch_size = 16\n",
+    "val_batch_size = 64\n",
+    "\n",
+    "# Getting the data\n",
+    "train_gen, test_gen, test_data, test_labels = process_data(img_dims, batch_size)"
    ]
   },
   {
@@ -75,23 +107,22 @@
     "      \"\"\"\n",
     "\n",
     "      # Count images in each class\n",
-    "      cls_cnts = [0] * len(class_map)\n",
-    "      for key, value in class_map.items():\n",
-    "          imgs = glob.glob(train_data_path + value + \"/*.png\")\n",
-    "          cls_cnts[key] = len(imgs)\n",
+    "      for _set in ['train', 'val', 'test']:\n",
+    "          n_normal = len(os.listdir(input_path + _set + '/NORMAL'))\n",
+    "          n_infect = len(os.listdir(input_path + _set + '/PNEUMONIA'))\n",
     "\n",
     "      # compute class distribution\n",
-    "      self.w_class1 = float(cls_cnts[0])/sum(cls_cnts)\n",
-    "      self.w_class0 = float(cls_cnts[1])/sum(cls_cnts)\n",
+    "      self.w_class1 = float(n_normal)/(n_normal+n_infect)\n",
+    "      self.w_class0 = float(n_infect)/sum(n_normal+n_infect)\n",
     "\n",
     "      # For convenience at train time, compute number of steps required to complete an epoch\n",
     "      val_img_cnt = 0\n",
     "      for key, value in class_map.items():\n",
-    "          imgs = glob.glob(val_data_path + value + \"/*.png\")\n",
+    "          imgs = glob.glob(val_data_path + value + \"/*.jpg\")\n",
     "          val_img_cnt += len(imgs)\n",
     "\n",
-    "      self.train_steps = (sum(cls_cnts) // self.batch_size) + 1\n",
-    "      self.val_steps = (val_img_cnt // self.val_batch_size) + 1  \n",
+    "      self.train_steps = ((n_normal+n_infect) // self.batch_size) + 1\n",
+    "      self.val_steps = ((n_normal+n_infect) // self.val_batch_size) + 1  \n",
     "\n",
     "\n",
     "  def get_model(self):\n",
@@ -130,33 +161,31 @@
     "model = CheXNet()\n",
     "\n",
     "\n",
+    "reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.1, patience=1, verbose=1)\n",
+    "early_stop = tf.keras.callbacks.EarlyStopping(monitor='val_loss', min_delta=0.1, patience=1, mode='min')\n",
+    "model_checkpoint = tf.keras.callbacks.ModelCheckpoint(\n",
+    "    filepath=checkpoint_filepath,\n",
+    "    save_weights_only=True,\n",
+    "    monitor='val_loss',\n",
+    "    mode='min',\n",
+    "    save_best_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Fitting the model\n",
+    "history = model.fit(\n",
+    "    train_generator, epochs=10, validation_data=val_generator,\n",
+    "    callbacks=[reduce_lr, model_checkpoint])\n",
     "\n",
+    "# Load the model with the lowest validation loss\n",
+    "model.load_weights(checkpoint_filepath)\n",
     "\n",
-    "# # Train the model\n",
-    "# train_datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
-    "# train_generator = train_datagen.flow_from_directory('/path/to/train', target_size=(224, 224),\n",
-    "#                                                     batch_size=16, class_mode='binary')\n",
-    "\n",
-    "# val_datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
-    "# val_generator = val_datagen.flow_from_directory('/path/to/val', target_size=(224, 224),\n",
-    "#                                                   batch_size=16, class_mode='binary')\n",
-    "\n",
-    "# reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.1, patience=1, verbose=1)\n",
-    "\n",
-    "# checkpoint_filepath = '/path/to/checkpoint'\n",
-    "# model_checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
-    "#     filepath=checkpoint_filepath,\n",
-    "#     save_weights_only=True,\n",
-    "#     monitor='val_loss',\n",
-    "#     mode='min',\n",
-    "#     save_best_only=True)\n",
-    "\n",
-    "# history = model.fit(train_generator, epochs=10, validation_data=val_generator, callbacks=[reduce_lr, model_checkpoint_callback])\n",
-    "\n",
-    "# # Load the model with the lowest validation loss\n",
-    "# model.load_weights(checkpoint_filepath)\n",
-    "\n",
-    "# model.summary()\n"
+    "model.summary()\n"
    ]
   }
  ],
