--- a/draft.ipynb
+++ b/draft.ipynb
@@ -2,25 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\marta\\anaconda3\\envs\\iannwtf\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "CheXNet applied to brain tumor MRI images used for binary classification of tumor vs no tumor.\n",
     "\"\"\"\n",
     "\n",
-    "from tensorflow.python.keras.layers import Dense\n",
-    "#import tensorflow.python.keras.applications\n",
     "import tensorflow.python.keras.backend as K\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -29,20 +18,31 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from keras.layers import Input, Dense\n",
-    "import glob"
+    "import prepare_data\n",
+    "import glob\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 5216 images belonging to 2 classes.\n",
+      "Found 624 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "# input_path = '../input/chest_xray/chest_xray/'\n",
     "input_path = 'C:/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/chest_xray/'\n",
     "\n",
     "# Checkpoint file path\n",
-    "checkpoint_filepath = '/path/to/checkpoint' \n",
+    "checkpoint_filepath = 'C:/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/Checkpoint' \n",
     "\n",
     "# Hyperparameters\n",
     "img_dims = 224\n",
@@ -51,27 +51,14 @@
     "val_batch_size = 64\n",
     "\n",
     "# Getting the data\n",
-    "train_gen, test_gen, test_data, test_labels = process_data(img_dims, batch_size)"
+    "train_gen, test_gen, test_data, test_labels = prepare_data.prepare_data(img_dims, batch_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'compile'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\marta\\OneDrive\\Desktop\\Osnabruck\\ImplementingANNswithTensorFlow\\FinalProject\\draft.ipynb Cell 3\u001b[0m in \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m x\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=51'>52</a>\u001b[0m \u001b[39m# Instantiate the CheXNet model\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m model \u001b[39m=\u001b[39m CheXNet()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=58'>59</a>\u001b[0m \u001b[39m### the text below was written by Chat GPT\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=59'>60</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m \u001b[39m# Compile the model\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m model\u001b[39m.\u001b[39mcompile(optimizer\u001b[39m=\u001b[39mtf\u001b[39m.\u001b[39mkeras\u001b[39m.\u001b[39moptimizers\u001b[39m.\u001b[39mAdam(beta_1\u001b[39m=\u001b[39m\u001b[39m0.9\u001b[39m, beta_2\u001b[39m=\u001b[39m\u001b[39m0.999\u001b[39m),\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m               loss\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbinary_crossentropy\u001b[39m\u001b[39m'\u001b[39m, metrics\u001b[39m=\u001b[39m[\u001b[39m'\u001b[39m\u001b[39maccuracy\u001b[39m\u001b[39m'\u001b[39m])\n",
-      "\u001b[1;32mc:\\Users\\marta\\OneDrive\\Desktop\\Osnabruck\\ImplementingANNswithTensorFlow\\FinalProject\\draft.ipynb Cell 3\u001b[0m in \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m loss \u001b[39m=\u001b[39m WeightedCrossEntropyBinaryLoss(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mzero_weight, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mone_weight)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39m# Note: default learning rate of 'adam' is 0.001 as required by the paper\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel\u001b[39m.\u001b[39;49mcompile(optimizer\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39madam\u001b[39m\u001b[39m'\u001b[39m, loss\u001b[39m=\u001b[39mloss\u001b[39m.\u001b[39mweighted_binary_crossentropy)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodel\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'compile'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class CheXNet(tf.keras.Model):\n",
     "  \"\"\"\n",
@@ -100,7 +87,7 @@
     "  \n",
     "  def get_data_stats(self, train_data_path, val_data_path, class_map):\n",
     "      \"\"\"\n",
-    "      Computes normal Vs Pneumonia class distribution\n",
+    "      Computes normal Vs Pneumonia class distribution.\n",
     "      :param train_data_path: path to training data. Samples os each class should be stored in separate folders\n",
     "      :param val_data_path: path to validation data. Samples os each class should be stored in separate folders\n",
     "      :param class_map: mapping of class index to folder names\n",
@@ -140,7 +127,7 @@
     "    loss = WeightedCrossEntropyBinaryLoss(self.zero_weight, self.one_weight)\n",
     "\n",
     "    # Compile the model\n",
-    "    model.compile(optimizer=tf.keras.optimizers.Adam(beta_1=0.9, beta_2=0.999),\n",
+    "    self.model=model.compile(optimizer=tf.keras.optimizers.Adam(beta_1=0.9, beta_2=0.999),\n",
     "                  loss=loss.weighted_binary_crossentropy, metrics=['accuracy'])\n",
     "    \n",
     "    return self.model\n",
@@ -173,13 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "You must compile your model before training/testing. Use `model.compile(optimizer, loss)`.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\marta\\OneDrive\\Desktop\\Osnabruck\\IANNwTFfinalProject\\draft.ipynb Cell 4\u001b[0m in \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/IANNwTFfinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Fitting the model\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/IANNwTFfinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m history \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mfit(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/IANNwTFfinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     train_gen, epochs\u001b[39m=\u001b[39;49m\u001b[39m10\u001b[39;49m, validation_data\u001b[39m=\u001b[39;49mtest_gen,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/IANNwTFfinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     callbacks\u001b[39m=\u001b[39;49m[reduce_lr, model_checkpoint])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/IANNwTFfinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Load the model with the lowest validation loss\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/marta/OneDrive/Desktop/Osnabruck/IANNwTFfinalProject/draft.ipynb#W3sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m model\u001b[39m.\u001b[39mload_weights(checkpoint_filepath)\n",
+      "File \u001b[1;32mc:\\Users\\marta\\anaconda3\\envs\\iannwtf\\lib\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[1;32mc:\\Users\\marta\\anaconda3\\envs\\iannwtf\\lib\\site-packages\\keras\\engine\\training.py:3618\u001b[0m, in \u001b[0;36mModel._assert_compile_was_called\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   3612\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_assert_compile_was_called\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m   3613\u001b[0m     \u001b[39m# Checks whether `compile` has been called. If it has been called,\u001b[39;00m\n\u001b[0;32m   3614\u001b[0m     \u001b[39m# then the optimizer is set. This is different from whether the\u001b[39;00m\n\u001b[0;32m   3615\u001b[0m     \u001b[39m# model is compiled\u001b[39;00m\n\u001b[0;32m   3616\u001b[0m     \u001b[39m# (i.e. whether the model is built and its inputs/outputs are set).\u001b[39;00m\n\u001b[0;32m   3617\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_is_compiled:\n\u001b[1;32m-> 3618\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\n\u001b[0;32m   3619\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mYou must compile your model before \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   3620\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mtraining/testing. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   3621\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mUse `model.compile(optimizer, loss)`.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   3622\u001b[0m         )\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: You must compile your model before training/testing. Use `model.compile(optimizer, loss)`."
+     ]
+    }
+   ],
    "source": [
     "#Fitting the model\n",
     "history = model.fit(\n",
-    "    train_generator, epochs=10, validation_data=val_generator,\n",
+    "    train_gen, epochs=10, validation_data=test_gen,\n",
     "    callbacks=[reduce_lr, model_checkpoint])\n",
     "\n",
     "# Load the model with the lowest validation loss\n",
