--- a/chexnet.ipynb
+++ b/chexnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Local path to the input\n",
+    "# Local path to the input that has to be specified\n",
     "input_path = 'C:/Users/marta/OneDrive/Desktop/Osnabruck/ImplementingANNswithTensorFlow/FinalProject/chest_xray/'\n",
     "\n",
     "# Checkpoint file path\n",
@@ -50,9 +50,6 @@
     "\n",
     "# Tensorboard log files path\n",
     "log_dir='./logs'\n",
-    "\n",
-    "# Tensorboard log files need to be specified in the terminal \n",
-    "#tensorboard --logdir=C:\\\\Users\\\\marta\\\\OneDrive\\\\Desktop\\\\Osnabruck\\\\IANNwTFfinalProject\n",
     "\n",
     "# Hyperparameters set in accordance with the methods of the original paper\n",
     "img_dims = 224\n",
@@ -76,7 +73,7 @@
    ],
    "source": [
     "# Adding files from the training dataset since the current validation set is only 0.03% of the training set\n",
-    "prepare_data.split_data(0.1)"
+    "prepare_data.split_data(0.1, input_path)"
    ]
   },
   {
@@ -95,7 +92,7 @@
    ],
    "source": [
     "# Getting the data\n",
-    "train_gen, val_gen, test_data, test_labels = prepare_data.prepare_data(img_dims, batch_size)"
+    "train_gen, val_gen, test_data, test_labels = prepare_data.prepare_data(img_dims, batch_size, input_path)"
    ]
   },
   {
